--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ matrix:
     - python: "2.7"
       env: TOX_ENV=flake8
     - python: "2.7"
-      env: TOX_EVN=package
+      env: TOX_ENV=package
 
     - python: "3.7"
       env: TOX_ENV=python
