--- a/.coveragerc
+++ b/.coveragerc
@@ -1,5 +1,5 @@
 [run]
-source = pyiddidf
+source = energyplus_iddidf
 
 [report]
 omit =
@@ -8,4 +8,4 @@ omit =
         setup.py
         *distutils*
         *.pyenv*
-        *pyiddidf/cli.py*
+        *energyplus_iddidf/cli.py*
