--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,6 @@
 traverse-namespace=1
 with-coverage=1
 cover-html=1
-cover-package=pyiddidf
+cover-package=energyplus_iddidf
 cover-tests=1
 cover-inclusive=1
